--- a/css/main.css
+++ b/css/main.css
@@ -7,8 +7,22 @@ body{
 }
 
 .register{
+
 }
 
-.buttonReg{
+.buttonForm{
+    border-radius: 5px;
+    text-decoration: none;
+    text-align: center;
+    border: none;
+    background-image: linear-gradient(90deg, rgba(131, 58,180, 0.75) 33%, rgba(253, 29, 29, 1) 66%, rgba(252, 176, 69, 1) 100%);
+    color: white;
+    font-size: 50px;
+}
+
+.error{
+
+    background-color: #FD1D1D;
+    color: white;
 
 }
